--- a/TaskManagement/nbproject/private/private.properties
+++ b/TaskManagement/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\HanDong\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-j2ee.server.home=C:/Users/HanDong/Documents/BE crew/apache-tomcat-9.0.98
-j2ee.server.instance=tomcat90:home=C:\\Users\\HanDong\\Documents\\BE crew\\apache-tomcat-9.0.98
+deploy.ant.properties.file=C:\\Users\\ngoct\\AppData\\Roaming\\NetBeans\\12.0\\tomcat90.properties
+j2ee.server.home=D:/TomCat/apache-tomcat-9.0.95-windows-x64/apache-tomcat-9.0.95
+j2ee.server.instance=tomcat90:home=D:\\TomCat\\apache-tomcat-9.0.95-windows-x64\\apache-tomcat-9.0.95
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\HanDong\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+user.properties.file=C:\\Users\\ngoct\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
